deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: default
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      annotations:
        "app.kubernetes.io/name": "ajayaraman"
        "app.kubernetes.io/component": "admission-controller"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "webhook-server-app"
        vault.hashicorp.com/agent-inject-secret-credentials.txt: "secret/data/webhook-server/config"
      labels:
        app: webhook-server
    spec:
      serviceAccountName: internal-app
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
        - name: webhook-server
          image: ajayaraman/basic-admission-controller:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8443
              name: webhook-api
          resources:
            requests:
              cpu: "100m"
              memory: "128M"
            limits:
              cpu: "250m"
              memory: "256M"
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: default
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook-server
webhooks:
  - name: webhook-server.default.svc
    rules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        operations: ["CREATE"]
        resources: ["pods", "deployments", "replicasets"]
    timeoutSeconds: 20
    clientConfig:
      service:
        name: webhook-server
        namespace: default
        path: "/validate"
    sideEffects: None
    admissionReviewVersions: ["v1beta1"]
